Thread pool task executor ignores errors returned from startCommand()

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • Platforms 2017-12-18, Platforms 2018-01-01, Platforms 2018-01-15
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      If NetworkInterfaceASIO is in shutdown, it will return an error from startCommand(). The ThreadPoolTaskExecutor ignores such errors. This could possibly lead to hangs, if a calling thread starts a command after shutdown has been called, because NetworkInterfaceASIO will never do that work or call its callback.

            Assignee:
            Benjamin Caimano (Inactive)
            Reporter:
            Samantha Ritter (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: