SERVER-32281 Thread pool task executor ignores errors returned from startCommand()

(cherry picked from commit f5d598dbc6b0eb1340d84d7d2c6faf0fd249a74b)