src/mongo/executor/thread_pool_task_executor.cpp
@@ -413,33 +413,36 @@ StatusWith<TaskExecutor::CallbackHandle> ThreadPoolTaskExecutor::scheduleRemoteC
         baton);
     wq.front()->isNetworkOperation = true;
     stdx::unique_lock<stdx::mutex> lk(_mutex);
-    auto cbHandle = enqueueCallbackState_inlock(&_networkInProgressQueue, &wq);
-    if (!cbHandle.isOK())
-        return cbHandle;
+    auto swCbHandle = enqueueCallbackState_inlock(&_networkInProgressQueue, &wq);
+    if (!swCbHandle.isOK())
+        return swCbHandle;
     const auto cbState = _networkInProgressQueue.back();
     LOG(3) << "Scheduling remote command request: " << redact(scheduledRequest.toString());
     lk.unlock();
-    _net->startCommand(
-            cbHandle.getValue(),
-            scheduledRequest,
-            [this, scheduledRequest, cbState, cb](const ResponseStatus& response) {
-                using std::swap;
-                CallbackFn newCb = [cb, scheduledRequest, response](const CallbackArgs& cbData) {
-                    remoteCommandFinished(cbData, cb, scheduledRequest, response);
-                };
-                stdx::unique_lock<stdx::mutex> lk(_mutex);
-                if (_inShutdown_inlock()) {
-                    return;
-                }
-                LOG(3) << "Received remote response: "
-                       << redact(response.isOK() ? response.toString()
-                                                 : response.status.toString());
-                swap(cbState->callback, newCb);
-                scheduleIntoPool_inlock(&_networkInProgressQueue, cbState->iter, std::move(lk));
-            },
-            baton)
-        .transitional_ignore();
-    return cbHandle;
+
+    auto commandStatus = _net->startCommand(
+        swCbHandle.getValue(),
+        scheduledRequest,
+        [this, scheduledRequest, cbState, cb](const ResponseStatus& response) {
+            using std::swap;
+            CallbackFn newCb = [cb, scheduledRequest, response](const CallbackArgs& cbData) {
+                remoteCommandFinished(cbData, cb, scheduledRequest, response);
+            };
+            stdx::unique_lock<stdx::mutex> lk(_mutex);
+            if (_inShutdown_inlock()) {
+                return;
+            }
+            LOG(3) << "Received remote response: "
+                   << redact(response.isOK() ? response.toString() : response.status.toString());
+            swap(cbState->callback, newCb);
+            scheduleIntoPool_inlock(&_networkInProgressQueue, cbState->iter, std::move(lk));
+        },
+        baton);
+
+    if (!commandStatus.isOK())
+        return commandStatus;
+
+    return swCbHandle;
 }
 
 void ThreadPoolTaskExecutor::cancel(const CallbackHandle& cbHandle) {
